# rima

./: .gitignore  README.md  build.sbt
src/main/scala/: RimaComputeArray.scala  VectorDotProduct.scala
src/test/scala/: RimaComputeArrayTest.scala  VectorDotProductTest.scala
tests/: CMakeLists.txt  hello_world_test.cpp
